style: align tag pages and disable issue comments

--- a/_sass/pages/_category-tag.scss
+++ b/_sass/pages/_category-tag.scss
@@ -55,7 +55,7 @@
 #page-category,
 #page-tag,
 #access-lastmod {
-  a:hover {
+  a:not(.post-preview):hover {
     @extend %link-hover;
 
     margin-bottom: -1px; /* Avoid jumping */
